# inferer-task

./: .gitignore  Cargo.toml  README.md  build.rs  server.py
benchmarks/: Cargo.toml  beef-python-bench.html  beef-rust-bench.html  report30s-py-multi.html  report30s.html
benchmarks/src/: main.rs
cereal/: model.capnp
model/: policy.pth
src/lib/: encoding.rs  mod.rs  model.rs  model_capnp.rs  server.rs
